--- a/view/css/superform.css
+++ b/view/css/superform.css
@@ -2,6 +2,8 @@
 /**
  * Superform!
  */
+ 
+@import url('superform/datepicker.css');
 
 div.superform fieldset {
     border: 1px solid #99a2a5;    
@@ -20,7 +22,7 @@ div.superform li.element > h5,
 div.superform li.element > h6,
 div.superform li.element > h7,
 div.superform li.element > h8 {    
-    margin: 0;    
+    margin: 0 0 .5em;    
     font-size: 14px;
 }
 
@@ -83,7 +85,10 @@ div.superform div.elements > ol {
 }
 
 div.superform > div.elements div.elements > ol {
-    padding-left: 2em;
+    padding-left: 2em;    
+}
+
+div.superform div.contents + div.children > div.elements > ol {
     margin-top: 1em;
 }
 
@@ -107,7 +112,7 @@ div.superform li.element > * + div.contents {
 }
 
 body.js div.superform > div.elements > ol > li.element {
-    margin-right: 250px;
+    margin-right: 251px;
     border-right: 1px dashed #b7c2c5;
 }
 
@@ -124,8 +129,47 @@ div.superform div.elements > ol > li div.element {
     display: inline;    
 }
 
-div.superform div.elements > ol > li > div.children > div.elements {
+div.superform div.elements > ol > li > div.contents + div.children > div.elements {
     margin-top: 1em;
+}
+
+div.superform input[type='text'],
+div.superform input[type='password'],
+div.superform textarea {
+    padding: .4em;    
+    background-color: #d7d9da;
+    border: 1px solid #58595;
+}
+
+div.superform input[type='submit'],
+div.superform input[type='reset']
+div.superform button {
+    background-color: #58595b;
+    border: 1px solid #58595b;        
+    cursor: pointer;    
+    font-weight: normal;
+    margin: 0.5em 0;
+    padding: 0.4em 1.5em;
+    text-align: center;
+    text-decoration: none;    
+}
+
+div.superform input.add[type="submit"],
+div.superform input.add[type="reset"],
+div.superform button.add {
+    background-image: url('superform/button/add.png');
+    background-repeat: no-repeat;
+    background-position: .6em center;
+    padding-left: 2em;
+}
+
+div.superform input.remove[type="submit"],
+div.superform input.remove[type="reset"],
+div.superform input.remove {
+    background-image: url('superform/button/remove.png');
+    background-repeat: no-repeat;
+    background-position: .6em center;
+    padding-left: 2em;
 }
 
 /* Full-width elements */
@@ -179,8 +223,7 @@ div.superform li.element.textarea > div.contents > textarea {
     width: 100%;
     min-width: 100%;
     max-width: 100%;
-    margin: 0;
-    padding: .3em;    
+    margin: 0;    
 }
 
 /* Custom textboxes */
@@ -206,25 +249,59 @@ div.superform div.elements li.element.textbox.linkedin > div.contents {
 }
 
 /* Checkboxes & radios */
-div.superform div.elements > ol > li.element.checkboxes > div.contents ul,
-div.superform div.elements > ol > li.element.radios > div.contents ul {
+
+div.superform div.elements > ol > li.element.checkboxes,
+div.superform div.elements > ol > li.element.radios,
+div.superform div.elements > ol > li.element.slider {
+    padding-bottom: 0;
+}
+
+div.superform div.elements > ol > li.element.checkboxes > div.contents > ul,
+div.superform div.elements > ol > li.element.radios > div.contents > ul,
+div.superform div.elements > ol > li.element.slider > div.contents > ul {
     padding: 0;
-    margin: -1em 0 0;    
+    margin: 0;    
     list-style: none;
     overflow: hidden;
+    border-top: 1px dashed #bcbdbf;
 }
 
-div.superform div.elements > ol > li.element.checkboxes > div.contents ul li,
-div.superform div.elements > ol > li.element.radios > div.contents ul li {
-    border: none;
-    padding: 1em 0 0;
-    width: 33%;
-    float: left;   
+div.superform div.elements > ol > li.element.checkboxes > div.contents > ul > li,
+div.superform div.elements > ol > li.element.radios > div.contents > ul > li,
+div.superform div.elements > ol > li.element.slider > div.contents > ul > li {
+    float: left;        
+    width: 50%;    
+    border-bottom: 1px dashed #bcbdbf;
+    border-right: 1px dashed #bcbdbf;
+    margin-left: -1px;
+    margin-bottom: -1px;
+    padding: 0;
 }
 
-div.superform div.elements > ol > li.element.checkboxes > div.contents ul li input[type="checkbox"],
-div.superform div.elements > ol > li.element.radios > div.contents ul li input[type="radio"]{
-    margin-left: 0;
+div.superform div.elements > ol > li.element.checkboxes.inline > div.contents > ul > li,
+div.superform div.elements > ol > li.element.radios.inline > div.contents > ul > li,
+div.superform div.elements > ol > li.element.slider.inline > div.contents > ul > li {
+    margin-bottom: 0;
+}
+
+div.superform div.elements > ol > li.element.checkboxes > div.contents > ul > li > label,
+div.superform div.elements > ol > li.element.radios > div.contents > ul > li > label,
+div.superform div.elements > ol > li.element.slider > div.contents > ul > li > label {
+    position: relative;
+    padding: 1em;
+    display: block;    
+    cursor: pointer;
+}
+
+div.superform div.elements > ol > li.element.checkboxes > div.contents > ul > li > label > input[type="checkbox"],
+div.superform div.elements > ol > li.element.radios > div.contents > ul > li > label > input[type="radio"],
+div.superform div.elements > ol > li.element.slider > div.contents > ul > li > label > input[type="radio"] {
+    position: absolute;
+    right: .5em;
+    top: 50%;
+    margin-top: -.5em;
+    height: 1em;
+    cursor: pointer;
 }
 
 
@@ -312,6 +389,7 @@ div.superform > div.footer > div.elements > div.element {
 div.superform div.footer input,
 div.superform div.footer button {
     background-color: #ee4843 !important;
+    border-color: #ee4843 !important;
     padding-left: 4em;
     padding-right: 4em;
     box-shadow: 2px 2px 0 rgba(0,0,0,.2);    
@@ -324,6 +402,7 @@ div.superform div.footer button:hover,
 div.superform div.footer input:focus,
 div.superform div.footer button:focus{
     background-color: #ed1a37 !important;
+    border-color: #ed1a37 !important;
     padding-left: 4em;
     padding-right: 4em;
 }
@@ -362,6 +441,7 @@ div.superform.aqua input[type="submit"],
 div.superform.aqua input[type="reset"],
 div.superform.aqua button {
     background-color: #1fb0b0;
+    border-color: #1fb0b0;
     color: white;
 }
 
@@ -398,6 +478,7 @@ div.superform.red input[type="submit"],
 div.superform.red input[type="reset"],
 div.superform.red button {
     background-color: #ee4843;
+    border-color: #ee4843;
     color: white;
 } 
 
@@ -439,6 +520,7 @@ div.superform.green input[type="submit"],
 div.superform.green input[type="reset"],
 div.superform.green button {
     background-color: #00b05b;
+    border-color: #00b05b;
     color: white;
 } 
 
