Solucionados los problemas al saltar de paso o enviar un formulario y permanecer en el mismo paso

--- a/view/css/project/edit/rewards.css
+++ b/view/css/project/edit/rewards.css
@@ -55,6 +55,10 @@ body.project-edit div#main.rewards div.superform li.element.reward div.children 
 }
 
 body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_5 > label {
+    background-image: url('../../icon/s/manual.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_6 > label {
     background-image: url('../../icon/s/product.png');
 }
 
