- Cofinanciación ($user->support) y Meritocracia ($user->worth) [sobrecarga] - Check::Mail ajustado y añadido Check::Password - Depurar validación (Email y Password) - Añadida sobrecarga en Image ($image->content)

--- a/view/css/superform.css
+++ b/view/css/superform.css
@@ -107,6 +107,11 @@ div.superform > div.elements > ol > li.element {
     padding: 2em 2em 2em 0;
 }
 
+div.superform > div.elements > ol > li.element.inline {
+    border-top: none;
+    padding: 0 2em 2em 0;
+}
+
 div.superform li.element > * + div.contents {
     margin-top: 1em;
 }
