--- a/view/css/project/edit.css
+++ b/view/css/project/edit.css
@@ -7,6 +7,7 @@
 @import url('edit/overview.css');
 @import url('edit/costs.css');
 @import url('edit/rewards.css');
+@import url('edit/supports.css');
 @import url('edit/preview.css');
 
 body.project-edit div#main div.status {
