--- a/view/css/project/edit/costs.css
+++ b/view/css/project/edit/costs.css
@@ -116,3 +116,124 @@ body.project-edit div#main.costs div.superform li.element.cost div.children li.e
     max-width: 8em;
     min-width: 8em;
 }
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl,
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dt,
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dd {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    text-indent: 0;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl {
+    font-size: 28px;
+    padding: 75px;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dt {
+    font-size: 14px;
+    text-transform: uppercase;
+}   
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dt.minimum > span,
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dt.optimum > span {
+    display: block;
+    position: absolute;    
+    left: 100%;
+    width: 10em;    
+    padding-bottom: 41px;    
+    text-align: center;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dt.minimum > span {
+    margin-left: -63px;
+    bottom: 0;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dt.optimum > span {
+    margin-top: 20px;
+    margin-left: -63px;
+    top: 100%;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dt.minimum > span {
+    color: #ed4844;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dd.minimum {
+    border-bottom: 10px solid #58595B;
+    z-index: 900;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dd.minimum > span {
+    display: block;
+    position: absolute;
+    left: 100%;
+    bottom: 100%;
+    width: 10em;
+    font-size: 28px;    
+    margin-left: -5em;
+    padding-left: 5px;
+    margin-bottom: 10px;        
+    text-align: center;   
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dd.minimum > span > strong {
+    background: url("/view/css/euro/red/l.png") no-repeat right center;
+    color: #ed4844;
+    padding-right: 31px;
+    padding-left: 5px;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dd.minimum > span > span.euro {
+    display: block;
+    overflow: hidden;    
+    position: absolute;
+    right: 5em;
+    width: 0;    
+    height: 20px;
+    margin-left: -5em;
+    margin-right: -5px;
+    z-index: 999;
+    border-left: 5px solid #ED4844;
+    border-right: 5px solid #ED4844;
+    font-weight: bold;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dt.optimum {
+    border-top: 10px solid grey;
+    margin-top: -10px;    
+    z-index: 0;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dd.optimum {
+    display: block;
+    position: absolute;
+    width: 10em;
+    left: 100%;
+    margin-left: -70px;
+    padding-top: 35px;    
+    text-align: center;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dd.optimum > strong {
+    margin-left: -270px;
+    padding-right: 31px;
+    background: url("/view/css/euro/l.png") no-repeat right center;
+}
+
+body.project-edit div#main.costs div.superform li.element.cost-meter dl dd.optimum > span.euro {
+    display: block;
+    overflow: hidden;
+    position: absolute;
+    left: -5px;
+    top: 0;
+    width: 0;
+    height: 20px;
+    margin-top: -10px;
+    border-left: 10px solid grey;
+}
+
+    
+    
