--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -1,5 +1,6 @@
 
 @import url('widget/summary.css');
+@import url('widget/media.css');
 @import url('widget/support.css');
 @import url('widget/share.css');
 @import url('../user/widget/user.css');
@@ -75,12 +76,5 @@ body.project-show div#main div.widget.user {
 body.project-show div#main div.widget.project-summary,
 body.project-show div#main div.widget.project-share {
     max-width: 580px;
-    margin-right: 20px;
-}
-
-body.project-show div#main div.widget.project-media {
-    padding: 0;
-    max-width: 620px;
-    height: 380px;
     margin-right: 20px;
 }
