--- a/view/css/project/edit/supports.css
+++ b/view/css/project/edit/supports.css
@@ -22,83 +22,17 @@ body.project-edit div#main.supports div.superform li.element.support li.element.
 }
 
 
-body.project-edit div#main.rewards div.superform li.element.reward-add .contents {
-    margin-left: 0 !important;
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li > label {
+body.project-edit div#main.supports div.superform li.element.support div.children li.element.support-type li > label {
     padding-left: 55px;        
     background: none no-repeat 10px center;
     min-height: 32px;
     line-height: 32px;
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_1 > label {
-    background-image: url('../../icon/m/file.png');
+body.project-edit div#main.supports div.superform li.element.support div.children li.element.support-type li.support_task > label {
+    background-image: url('../../icon/m/task.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_2 > label {
-    background-image: url('../../icon/m/money.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_3 > label {
-    background-image: url('../../icon/m/code.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_4 > label {
-    background-image: url('../../icon/m/service.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_5 > label {
-    background-image: url('../../icon/m/manual.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_6 > label {
-    background-image: url('../../icon/m/product.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li > label {
-    padding-left: 55px;        
-    background: none no-repeat 10px center;
-    min-height: 32px;
-    line-height: 32px;
-}
-     
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_1 > label {
-    background-image: url('../../icon/m/license/ohl.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_2 > label {
-    background-image: url('../../icon/m/license/cc.png');
-}
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_3 > label {
-    background-image: url('../../icon/m/license/gpl.png');
-}
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_4 > label {
-    background-image: url('../../icon/m/license/odbl.png');
-}
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_5 > label {
-    background-image: url('../../icon/m/license/xoln.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_6 > label {
-    background-image: url('../../icon/m/license/agpl.png');
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-amount > div.contents > input {
-    width: 3em;
-    max-width: 3em;
-    min-width: 3em;
-    float: left;
-    padding-right: 2em;
-    background-image: url('/view/css/euro/s.png');    
-    background-repeat: no-repeat;
-    background-position: 3.7em center;
-    font-weight: bold;
-}
-
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-units > div.contents > input {
-    width: 4.6em;
-    max-width: 4.6em;
-    min-width: 4.6em;
+body.project-edit div#main.supports div.superform li.element.support div.children li.element.support-type li.support_lend > label {
+    background-image: url('../../icon/m/lend.png');
 }
