Arreglados dos "syntax error" en el css.

--- a/view/css/superform.css
+++ b/view/css/superform.css
@@ -144,7 +144,7 @@ div.superform input[type='password'],
 div.superform textarea {
     padding: .4em;    
     background-color: #d7d9da;
-    border: 1px solid #58595;    
+    border: 1px solid #58595b;
 }
 
 div.superform textarea {
