Widget "Colaboraciones no económicas"

--- a/view/css/header.css
+++ b/view/css/header.css
@@ -46,6 +46,7 @@ div#sub-header {
     background-color: white;
     clear: both;
     padding: 20px 0;
+    margin-bottom: 20px;
 }
 
 div#header div#about {    
