Arreglado que no salia el iono de recompensa archivo digital 'li.file' (llaves en la linea 27)

--- a/view/css/project/widget/rewards.css
+++ b/view/css/project/widget/rewards.css
@@ -24,7 +24,7 @@ div.widget.project-rewards ul li > p {
     margin:  0 0 1em;
 }
 
-div.widget.project-rewards
+div.widget.project-rewards {}
 
 
 div.widget.project-rewards ul li.file  {
