--- a/view/css/common.css
+++ b/view/css/common.css
@@ -77,14 +77,32 @@ a.button {
     display: inline-block;
     text-decoration: none;    
     text-align: center;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: #149290 url('button/aqua.png') repeat-x top;   
+}
+
+input[type="submit"]:active,
+input[type="reset"]:active,
+button:active,
+a.button:active {
+    background: #60c1bf url('button/aqua-active.png') repeat-x top;    
 }
 
 input.red[type="submit"],
 input.red[type="reset"],
 button.red,
-a.button.red {
-    background-color: #ed1a37;
+a.button.red {    
+    background: #b5161e url('button/red.png') repeat-x top;    
     color: white;    
+} 
+
+input.red[type="submit"]:active,
+input.red[type="reset"]:active,
+button.red:active,
+a.button.red:active {
+    background: #e44133 url('button/red-active.png') repeat-x top;    
 } 
 
 input.aqua[type="submit"],
