--- a/view/css/project/widget/support.css
+++ b/view/css/project/widget/support.css
@@ -110,11 +110,11 @@ div.widget.project-support a.button.supportit {
 }
 
 /* Animated/static meter */
-div.widget.project-support > div.data {
+div.widget.project-support > div.meter {
     position: relative;
 }
 
-div.widget.project-support div.meter {
+div.widget.project-support div.graph {
     width: 28px;
     overflow: visible;
     position: absolute;
@@ -126,18 +126,18 @@ div.widget.project-support div.meter {
     font-size: 0;
 }
 
-div.widget.project-support div.meter > div.optimum,
-div.widget.project-support div.meter > div.minimum {
+div.widget.project-support div.graph > div.optimum,
+div.widget.project-support div.graph > div.minimum {
     float: right;
     width: 26px;
 }
 
-div.widget.project-support div.meter > div.optimum {
+div.widget.project-support div.graph > div.optimum {
     background: url('support/optimum.png') no-repeat center top;
     height: 45px;
 }
 
-div.widget.project-support div.meter > div.minimum {    
+div.widget.project-support div.graph > div.minimum {    
     background: url('support/minimum.png') no-repeat center top;    
     position: absolute;
     right: 0;
@@ -145,7 +145,7 @@ div.widget.project-support div.meter > div.minimum {
     bottom: 0;
 }
 
-div.widget.project-support div.meter > div.minimum > div.done {
+div.widget.project-support div.graph > div.minimum > div.done {
     background: url('support/done.png') no-repeat -9px bottom;    
     position: absolute;
     bottom: 0;
@@ -154,7 +154,7 @@ div.widget.project-support div.meter > div.minimum > div.done {
     overflow: visible;
 }
 
-div.widget.project-support div.meter > div.minimum > div.done strong {
+div.widget.project-support div.graph > div.minimum > div.done strong {
     background: url('support/marker.png') no-repeat center center;
     display: block;
     width: 29px;  
