Aplicando estilos (copiados de vista proyecto) a las paginas de admin

--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -4,6 +4,7 @@
 @import url('header.css');
 @import url('footer.css');
 @import url('superform.css');
+@import url('admin.css');
 @import url('project.css');
 @import url('user.css');
 
