--- a/view/css/user/widget/user.css
+++ b/view/css/user/widget/user.css
@@ -1,17 +1,13 @@
-div.widget.user .subtitle {
-    padding-top: 90px !important;
-    background: url('/view/css/avatar/m.png') no-repeat top left;        
+div.widget.user {   
     margin-bottom: .5em;
-    position: relative;
 }
 
-div.widget.user .subtitle img {
+div.widget.user div.image {
     width: 80px;
     height: 80px;
     display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
+    background: url('/view/css/avatar/m.png') no-repeat top left;       
+    margin-bottom: 12px;
 }
 
 div.widget.user blockquote.about {
@@ -57,6 +53,5 @@ div.widget.user dl dd.links ul a {
 
 
 div.widget.user a.button {
-    display: block;
-    margin: 1em 1em 0;
+    margin: 1.5em 0 0;
 }
