--- a/view/css/project/widget/support.css
+++ b/view/css/project/widget/support.css
@@ -12,7 +12,7 @@ div.widget.project-support dl {
 }
 
 div.widget.project-support dl dt {
-    margin-top: 1em;
+    margin-top: .5em;
 }
 
 div.widget.project-support dl dt,
@@ -86,7 +86,6 @@ div.widget.project-support dl dd.minimum {
 
 div.widget.project-support dl dt.reached {
     clear: both;
-    padding-top: 10px;
 }
 
 div.widget.project-support dl dd.reached {        
