--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -4,6 +4,7 @@
 @import url('widget/share.css');
 @import url('widget/support.css');
 @import url('widget/needs.css');
+@import url('widget/schedule.css');
 @import url('widget/collaborations.css');
 @import url('widget/rewards.css');
 @import url('../user/widget/user.css');
@@ -84,7 +85,8 @@ body.project-show div#main div.widget.user {
 
 body.project-show div#main div.widget.project-summary,
 body.project-show div#main div.widget.project-share,
-body.project-show div#main div.widget.project-needs {
+body.project-show div#main div.widget.project-needs,
+body.project-show div#main div.widget.project-schedule {
     max-width: 580px;
     margin-right: 20px;
 }
